--- a/templates/conference/index.html.twig
+++ b/templates/conference/index.html.twig
@@ -6,7 +6,7 @@
     <h2>Give your feedback!</h2>
 
     {% for conference in conferences %}
-        <h4><a href="conference/{{ conference.getId }}">{{ conference }}</a></h4>
+        <h4><a href="{{ path('conference', { id: conference.id }) }}">{{ conference }}</a></h4>
         {% for comment in conference.getComments %}
             <p> {{ comment }}</p>
         {% endfor %}
