--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -18,7 +18,7 @@
     <label for="inputUsername">Username</label>
     <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" required autofocus>
     <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" required>
+    <input type="password" name="password" id="inputPassword" class="form-control">
 
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
